--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.1",
     "html-to-text": "^8.0.0",
     "method-override": "^3.0.0",
